# wasm-filters

./: Makefile  README.md  docker-compose.yaml  envoy.Dockerfile  release-binaries.sh
.github/: PULL_REQUEST_TEMPLATE.md  label-commenter-config.yml  release-drafter.yml  slack.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  ci.md  config.yml  documentation.md  feature_request.md
.github/workflows/: label-commenter.yml  release-binaries.yml  release-drafter.yml  slack.yml
JWTManipulator9000/: Cargo.toml  LICENSE  README.md
JWTManipulator9000/src/: lib.rs
JWTManipulator9000/src/json_parse/: mod.rs  rules.rs
http-auth/: Cargo.toml  Makefile  docker-compose.yaml
http-auth/src/: lib.rs
metrics-store/: Makefile  docker-compose.yaml  envoy.yaml
metrics-store/metrics-collector/: Cargo.toml
metrics-store/metrics-collector/src/: lib.rs
metrics-store/singleton-queue/: Cargo.toml
metrics-store/singleton-queue/src/: lib.rs
singleton-http-call/: Cargo.toml  Makefile  docker-compose.yaml  envoy.yaml
singleton-http-call/src/: lib.rs
tcp-metrics/: Cargo.toml  Makefile  docker-compose.yaml  envoy.yaml
tcp-metrics/src/: docker-compose.yaml  lib.rs
tcp-packet-parse/: Cargo.toml  Makefile  docker-compose.yaml  envoy.yaml
tcp-packet-parse/src/: lib.rs
upstream/: Dockerfile  Makefile  go.mod  main.go
