[package]
name = "jwt-filter"
version = "0.1.0"
authors = ["pranav <adpranavb2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
bincode = "1.0"
proxy-wasm = "^0.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json ="1.0"
wasm-bindgen = "0.2"