[package]
name = "singleton-queue"
version = "0.1.0"
authors = ["kanishkarj <kanishkarj@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.0"
wasm-bindgen = "0.2"
